fix alignment again

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,7 @@ body {
 main {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  padding: 3rem;
+  padding: 3rem 0.5rem;
   width: auto;
   min-width: 50vh;
   height: 100vh;
@@ -37,8 +37,9 @@ main {
 }
 
 .photo {
+  display: flex;
   border-radius: 5%;
-  flex-shrink: 0;
+  flex-grow: 1;
   min-width: 200px;
   max-width: 768px;
   // width: auto;
@@ -49,7 +50,7 @@ main {
 
 .profile-name {
   -webkit-box-reflect: below -1vh linear-gradient(transparent, rgba(255, 255, 255, 0.11));
-  font-size: 1.85em;
+  font-size: 1.8em;
 }
 
 .profile-title {
